--- a/configs/seem/focalt_unicl_lang_v1.yaml
+++ b/configs/seem/focalt_unicl_lang_v1.yaml
@@ -8,7 +8,7 @@
 # Define Test/Trainer/Saving
 PIPELINE: XDecoderPipeline
 TRAINER: xdecoder
-SAVE_DIR: '../../data/output/test'
+SAVE_DIR: './output' # IMPORTANT
 base_path: "./"
 
 # Resume Logistic
@@ -18,8 +18,8 @@ RESUME_FROM: ''
 EVAL_AT_START: false
 
 # Logging and Debug
-WANDB: False
-LOG_EVERY: 100
+WANDB: True
+LOG_EVERY: 10
 FIND_UNUSED_PARAMETERS: false
 
 # Speed up training
@@ -34,7 +34,7 @@ LOADER:
 ##################
 # Task settings
 ##################
-VERBOSE: true
+VERBOSE: false
 MODEL:
   NAME: seem_model_v1
   HEAD: xdecoder_head
@@ -77,7 +77,7 @@ MODEL:
   ENCODER:
     NAME: transformer_encoder_fpn
     IGNORE_VALUE: 255
-    NUM_CLASSES: 133
+    NUM_CLASSES: 6 # IMPORTANT
     LOSS_WEIGHT: 1.0
     CONVS_DIM: 512
     MASK_DIM: 512
@@ -93,17 +93,17 @@ MODEL:
       ENABLED: True
     DETECTION: False
     SPATIAL:
-      ENABLED: True
+      ENABLED: False # IMPORTANT
       MAX_ITER: 1
     GROUNDING:
-      ENABLED: True
+      ENABLED: False # IMPORTANT
       MAX_LEN: 5
       TEXT_WEIGHT: 2.0
       CLASS_WEIGHT: 0.5
     RETRIEVAL:
       ENABLED: False
     LVIS:
-      ENABLED: True
+      ENABLED: False # IMPORTANT
       THRES: 0.7
     OPENIMAGE:
       ENABLED: False
@@ -222,13 +222,8 @@ ATTENTION_ARCH:
   QUERY_NUMBER: 3
 
 DATASETS:
-  TRAIN: ["coco_2017_train_panoptic_filtrefgumdval_with_sem_seg_caption_grounding_lvis",]
-  # TRAIN: ["coco_2017_train_panoptic_with_sem_seg_caption_grounding",]
-  TEST: ["coco_2017_val_panoptic_with_sem_seg", "pascalvoc_val_Point", "refcocog_val_umd"]  # to evaluate instance and semantic performance as well
-  # TEST: ["pascalvoc_val_Point"] # [pascalvoc, openimage600, ade600, davis, cocomini], [Point, Scribble, Polygon, Circle, Box]
-  # TEST: ["cocomini_val_Point", "cocomini_val_Circle", "cocomini_val_Scribble", "cocomini_val_Polygon", "cocomini_val_Box"] # [pascalvoc, openimage600, ade600, davis, cocomini], [Point, Scribble, Polygon, Circle, Box]
-  # TEST: ["ade600_val_Point", "ade600_val_Circle", "ade600_val_Scribble", "ade600_val_Polygon", "ade600_val_Box"] # [pascalvoc, openimage600, ade600, davis, cocomini], [Point, Scribble, Polygon, Circle, Box]
-  # TEST: ["openimage600_val_Point", "openimage600_val_Circle", "openimage600_val_Scribble", "openimage600_val_Polygon", "openimage600_val_Box"] # [pascalvoc, openimage600, ade600, davis, cocomini], [Point, Scribble, Polygon, Circle, Box]
+  TRAIN: ["table_tennis_instance-train",] # IMPORTANT
+  TEST: ["table_tennis_instance-valid"]  # IMPORTANT
   CLASS_CONCAT: false
   SIZE_DIVISIBILITY: 32
   PROPOSAL_FILES_TRAIN: []
@@ -254,8 +249,8 @@ TEST:
     ENABLED: False
 
 DATALOADER:
-  FILTER_EMPTY_ANNOTATIONS: False
-  NUM_WORKERS: 8
+  FILTER_EMPTY_ANNOTATIONS: True # IMPORTANT
+  NUM_WORKERS: 2 # IMPORTANT
   LOAD_PROPOSALS: False
   SAMPLER_TRAIN: "TrainingSampler"
   ASPECT_RATIO_GROUPING: True
@@ -271,6 +266,28 @@ COCO:
     MIN_SCALE: 0.1
     MAX_SCALE: 2.0
     DATASET_MAPPER_NAME: "coco_interactive"
+    IGNORE_VALUE: 255
+    COLOR_AUG_SSD: False
+    SIZE_DIVISIBILITY: 32
+    RANDOM_FLIP: "horizontal"
+    MASK_FORMAT: "polygon"
+    FORMAT: "RGB"
+    CROP:
+      ENABLED: True
+  DATASET:
+    DATASET: 'coco'
+
+TABLETENNIS: # IMPORTANT
+  INPUT:
+    MIN_SIZE_TRAIN: 800
+    MAX_SIZE_TRAIN: 1333
+    MIN_SIZE_TRAIN_SAMPLING: 'choice'
+    MIN_SIZE_TEST: 800
+    MAX_SIZE_TEST: 1333
+    IMAGE_SIZE: 640
+    MIN_SCALE: 0.1
+    MAX_SCALE: 2.0
+    DATASET_MAPPER_NAME: "table_tennis"
     IGNORE_VALUE: 255
     COLOR_AUG_SSD: False
     SIZE_DIVISIBILITY: 32
