add chestx dataset

--- a/configs/seem/focalt_unicl_lang_v1.yaml
+++ b/configs/seem/focalt_unicl_lang_v1.yaml
@@ -222,15 +222,15 @@ ATTENTION_ARCH:
   QUERY_NUMBER: 3
 
 DATASETS:
-  TRAIN: ["table_tennis_instance-train",] # IMPORTANT
-  TEST: ["table_tennis_instance-valid"]  # IMPORTANT
+  TRAIN: ["chestx_instance-train",] # IMPORTANT
+  TEST: ["chestx_instance-test"]  # IMPORTANT
   CLASS_CONCAT: false
   SIZE_DIVISIBILITY: 32
   PROPOSAL_FILES_TRAIN: []
 
 INPUT:
-  PIXEL_MEAN: [123.675, 116.280, 103.530]
-  PIXEL_STD: [58.395, 57.120, 57.375]
+  PIXEL_MEAN: [133.5504, 133.5504, 133.5504] # IMPORTANT
+  PIXEL_STD: [64.0142, 64.0142, 64.0142] # IMPORTANT
 
 TRAIN:
   ASPECT_RATIO_GROUPING: true
@@ -288,6 +288,28 @@ TABLETENNIS: # IMPORTANT
     MIN_SCALE: 0.1
     MAX_SCALE: 2.0
     DATASET_MAPPER_NAME: "table_tennis"
+    IGNORE_VALUE: 255
+    COLOR_AUG_SSD: False
+    SIZE_DIVISIBILITY: 32
+    RANDOM_FLIP: "horizontal"
+    MASK_FORMAT: "polygon"
+    FORMAT: "RGB"
+    CROP:
+      ENABLED: True
+  DATASET:
+    DATASET: 'coco'
+
+CHESTX:
+  INPUT:
+    MIN_SIZE_TRAIN: 1024
+    MAX_SIZE_TRAIN: 1024
+    MIN_SIZE_TRAIN_SAMPLING: 'choice'
+    MIN_SIZE_TEST: 1024
+    MAX_SIZE_TEST: 1024
+    IMAGE_SIZE: 640
+    MIN_SCALE: 0.1
+    MAX_SCALE: 2.0
+    DATASET_MAPPER_NAME: "chestx"
     IGNORE_VALUE: 255
     COLOR_AUG_SSD: False
     SIZE_DIVISIBILITY: 32
