--- a/configs/seem/focalt_unicl_lang_v1.yaml
+++ b/configs/seem/focalt_unicl_lang_v1.yaml
@@ -18,12 +18,12 @@ RESUME_FROM: ''
 EVAL_AT_START: false
 
 # Logging and Debug
-WANDB: True
+WANDB: False
 LOG_EVERY: 10
 FIND_UNUSED_PARAMETERS: false
 
 # Speed up training
-FP16: false
+FP16: True
 PORT: '36873'
 
 # misc
@@ -77,7 +77,7 @@ MODEL:
   ENCODER:
     NAME: transformer_encoder_fpn
     IGNORE_VALUE: 255
-    NUM_CLASSES: 6 # IMPORTANT
+    NUM_CLASSES: 5 # IMPORTANT
     LOSS_WEIGHT: 1.0
     CONVS_DIM: 512
     MASK_DIM: 512
@@ -115,7 +115,7 @@ MODEL:
       ENABLED: False
       PHRASE_PROB: 0.5
       SIM_THRES: 0.95
-    DEEP_SUPERVISION: True
+    DEEP_SUPERVISION: False # IMPORTANT FOR FINE-TUNE
     NO_OBJECT_WEIGHT: 0.1
     GCLASS_WEIGHT: 0.4
     GMASK_WEIGHT: 1.0
@@ -155,9 +155,9 @@ MODEL:
     TOP_SPATIAL_LAYERS: 10
     TOP_OPENIMAGE_LAYERS: 10
     TEST:
-      SEMANTIC_ON: True
+      SEMANTIC_ON: False
       INSTANCE_ON: True
-      PANOPTIC_ON: True
+      PANOPTIC_ON: False
       OVERLAP_THRESHOLD: 0.8
       OBJECT_MASK_THRESHOLD: 0.8
       SEM_SEG_POSTPROCESSING_BEFORE_INFERENCE: false
@@ -222,15 +222,15 @@ ATTENTION_ARCH:
   QUERY_NUMBER: 3
 
 DATASETS:
-  TRAIN: ["chestx_instance-train",] # IMPORTANT
-  TEST: ["chestx_instance-test"]  # IMPORTANT
+  TRAIN: ["pan_nuke-train",] # IMPORTANT
+  TEST: ["pan_nuke-test"]  # IMPORTANT
   CLASS_CONCAT: false
   SIZE_DIVISIBILITY: 32
   PROPOSAL_FILES_TRAIN: []
 
 INPUT:
-  PIXEL_MEAN: [133.5504, 133.5504, 133.5504] # IMPORTANT
-  PIXEL_STD: [64.0142, 64.0142, 64.0142] # IMPORTANT
+  PIXEL_MEAN: [188.3114, 144.9482, 179.5738] # IMPORTANT
+  PIXEL_STD: [27.1516, 32.1171, 25.3059] # IMPORTANT
 
 TRAIN:
   ASPECT_RATIO_GROUPING: true
@@ -241,7 +241,7 @@ TRAIN:
 TEST:
   DETECTIONS_PER_IMAGE: 100
   NAME: coco_eval
-  IOU_TYPE: ['bbox', 'segm']
+  IOU_TYPE: ['segm']
   USE_MULTISCALE: false
   BATCH_SIZE_TOTAL: 8
   MODEL_FILE: ''
@@ -250,7 +250,7 @@ TEST:
 
 DATALOADER:
   FILTER_EMPTY_ANNOTATIONS: True # IMPORTANT
-  NUM_WORKERS: 2 # IMPORTANT
+  NUM_WORKERS: 8 # IMPORTANT
   LOAD_PROPOSALS: False
   SAMPLER_TRAIN: "TrainingSampler"
   ASPECT_RATIO_GROUPING: True
@@ -301,12 +301,12 @@ TABLETENNIS: # IMPORTANT
 
 CHESTX:
   INPUT:
-    MIN_SIZE_TRAIN: 1024
-    MAX_SIZE_TRAIN: 1024
-    MIN_SIZE_TRAIN_SAMPLING: 'choice'
-    MIN_SIZE_TEST: 1024
-    MAX_SIZE_TEST: 1024
-    IMAGE_SIZE: 640
+    MIN_SIZE_TRAIN: 1024 # does nothing
+    MAX_SIZE_TRAIN: 1024 # does nothing
+    MIN_SIZE_TRAIN_SAMPLING: 'choice' # does nothing
+    MIN_SIZE_TEST: 1024 # does nothing
+    MAX_SIZE_TEST: 1024 # does nothing
+    IMAGE_SIZE: 512
     MIN_SCALE: 0.1
     MAX_SCALE: 2.0
     DATASET_MAPPER_NAME: "chestx"
@@ -318,6 +318,21 @@ CHESTX:
     FORMAT: "RGB"
     CROP:
       ENABLED: True
+  DATASET:
+    DATASET: 'coco'
+
+PAN_NUKE:
+  INPUT:
+    IMAGE_SIZE: 256
+    MIN_SCALE: 0.1
+    MAX_SCALE: 2.0
+    DATASET_MAPPER_NAME: "pan_nuke"
+    IGNORE_VALUE: 255
+    COLOR_AUG_SSD: False
+    SIZE_DIVISIBILITY: 32
+    RANDOM_FLIP: "horizontal"
+    MASK_FORMAT: "polygon"
+    FORMAT: "RGB"
   DATASET:
     DATASET: 'coco'
 
@@ -426,10 +441,12 @@ SOLVER:
   LR_MULTIPLIER:
     backbone: 0.1
     lang_encoder: 0.1
+    class_embed: 0.1
+    mask_embed: 0.1
   FIX_PARAM:
-    backbone: True
-    lang_encoder: True
-    pixel_decoder: True
+    model: True
+  #IGNORE_FIX: ['sem_seg_head']
+  IGNORE_FIX: ['class_embed', 'mask_embed', 'pixel_decoder_adapter', 'decoder_adapter_layers']
   WEIGHT_DECAY_NORM: 0.0
   WEIGHT_DECAY_EMBED: 0.0
   CLIP_GRADIENTS:
