Fix pan nuke dataset and config

--- a/configs/seem/focalt_unicl_lang_v1.yaml
+++ b/configs/seem/focalt_unicl_lang_v1.yaml
@@ -222,8 +222,8 @@ ATTENTION_ARCH:
   QUERY_NUMBER: 3
 
 DATASETS:
-  TRAIN: ["pan_nuke-train",] # IMPORTANT
-  TEST: ["pan_nuke-test"]  # IMPORTANT
+  TRAIN: ["pan_nuke-train"] # IMPORTANT
+  TEST: ["pan_nuke-val"]  # IMPORTANT
   CLASS_CONCAT: false
   SIZE_DIVISIBILITY: 32
   PROPOSAL_FILES_TRAIN: []
@@ -250,7 +250,7 @@ TEST:
 
 DATALOADER:
   FILTER_EMPTY_ANNOTATIONS: True # IMPORTANT
-  NUM_WORKERS: 8 # IMPORTANT
+  NUM_WORKERS: 4 # IMPORTANT
   LOAD_PROPOSALS: False
   SAMPLER_TRAIN: "TrainingSampler"
   ASPECT_RATIO_GROUPING: True
