--- a/configs/seem/focalt_unicl_lang_v1.yaml
+++ b/configs/seem/focalt_unicl_lang_v1.yaml
@@ -17,6 +17,10 @@ WEIGHT: false
 RESUME_FROM: ''
 EVAL_AT_START: false
 
+# Adapter config
+USE_ADAPTERS: true
+ADAPTER_DOWNSCALE_FACTOR: 16
+
 # Logging and Debug
 WANDB: False
 LOG_EVERY: 10
@@ -77,7 +81,7 @@ MODEL:
   ENCODER:
     NAME: transformer_encoder_fpn
     IGNORE_VALUE: 255
-    NUM_CLASSES: 5 # IMPORTANT
+    NUM_CLASSES: 1 # IMPORTANT
     LOSS_WEIGHT: 1.0
     CONVS_DIM: 512
     MASK_DIM: 512
@@ -115,7 +119,7 @@ MODEL:
       ENABLED: False
       PHRASE_PROB: 0.5
       SIM_THRES: 0.95
-    DEEP_SUPERVISION: False # IMPORTANT FOR FINE-TUNE
+    DEEP_SUPERVISION: True # IMPORTANT
     NO_OBJECT_WEIGHT: 0.1
     GCLASS_WEIGHT: 0.4
     GMASK_WEIGHT: 1.0
@@ -222,15 +226,15 @@ ATTENTION_ARCH:
   QUERY_NUMBER: 3
 
 DATASETS:
-  TRAIN: ["pan_nuke-train"] # IMPORTANT
-  TEST: ["pan_nuke-val"]  # IMPORTANT
+  TRAIN: ["dolphin-train"] # IMPORTANT
+  TEST: ["dolphin-val"]  # IMPORTANT
   CLASS_CONCAT: false
   SIZE_DIVISIBILITY: 32
   PROPOSAL_FILES_TRAIN: []
 
 INPUT:
-  PIXEL_MEAN: [188.3114, 144.9482, 179.5738] # IMPORTANT
-  PIXEL_STD: [27.1516, 32.1171, 25.3059] # IMPORTANT
+  PIXEL_MEAN: [92.2797, 154.5510, 153.1920] # IMPORTANT
+  PIXEL_STD: [67.1433, 39.6286, 41.3266] # IMPORTANT
 
 TRAIN:
   ASPECT_RATIO_GROUPING: true
@@ -329,6 +333,32 @@ PAN_NUKE:
     DATASET_MAPPER_NAME: "pan_nuke"
     IGNORE_VALUE: 255
     COLOR_AUG_SSD: False
+    SIZE_DIVISIBILITY: 32
+    RANDOM_FLIP: "horizontal"
+    MASK_FORMAT: "polygon"
+    FORMAT: "RGB"
+  DATASET:
+    DATASET: 'coco'
+    
+TRASHCAN:
+  INPUT:
+    IMAGE_SIZE: 256
+    MIN_SCALE: 0.9
+    MAX_SCALE: 2.0
+    DATASET_MAPPER_NAME: "trashcan"
+    SIZE_DIVISIBILITY: 32
+    RANDOM_FLIP: "horizontal"
+    MASK_FORMAT: "polygon"
+    FORMAT: "RGB"
+  DATASET:
+    DATASET: 'coco'
+
+DOLPHIN:
+  INPUT:
+    IMAGE_SIZE: 512
+    MIN_SCALE: 0.9
+    MAX_SCALE: 2.0
+    DATASET_MAPPER_NAME: "dolphin"
     SIZE_DIVISIBILITY: 32
     RANDOM_FLIP: "horizontal"
     MASK_FORMAT: "polygon"
@@ -446,7 +476,7 @@ SOLVER:
   FIX_PARAM:
     model: True
   #IGNORE_FIX: ['sem_seg_head']
-  IGNORE_FIX: ['class_embed', 'mask_embed', 'pixel_decoder_adapter', 'decoder_adapter_layers']
+  IGNORE_FIX: ['class_embed', 'mask_embed', 'pixel_decoder_self_attention_adapter', 'decoder_self_attention_adapter', 'decoder_cross_attention_adapter']
   WEIGHT_DECAY_NORM: 0.0
   WEIGHT_DECAY_EMBED: 0.0
   CLIP_GRADIENTS:
