add the lora logic and checkpointing

--- a/assets/requirements/requirements.txt
+++ b/assets/requirements/requirements.txt
@@ -1,5 +1,5 @@
-torch==2.1.0
-torchvision==0.16.0
+torch
+torchvision
 pillow==9.4.0
 opencv-python==4.8.1.78
 pyyaml==6.0.1
@@ -34,3 +34,4 @@ infinibatch==0.1.1
 gradio==3.42.0
 adapter-transformers
 python-dotenv
+prettytable
