--- a/assets/requirements/requirements_custom.txt
+++ b/assets/requirements/requirements_custom.txt
@@ -1,2 +1,3 @@
 git+https://github.com/arogozhnikov/einops.git
 git+https://github.com/MaureenZOU/detectron2-xyz.git
+git+https://github.com/Baijiong-Lin/LoRA-Torch
