Add correct model loading

--- a/configs/seem/focall_unicl_lang_v1.yaml
+++ b/configs/seem/focall_unicl_lang_v1.yaml
@@ -292,6 +292,8 @@ COCO:
 
 DOLPHIN:
   INPUT:
+    PIXEL_MEAN: [92.2797, 154.551, 153.192]
+    PIXEL_STD: [67.1433, 39.6286, 41.3266]
     IMAGE_SIZE: 512
     MIN_SCALE: 0.9
     MAX_SCALE: 2.0
@@ -305,6 +307,8 @@ DOLPHIN:
 
 ZEROWASTE:
   INPUT:
+    PIXEL_MEAN: [127.4396, 122.557, 116.073]
+    PIXEL_STD: [60.4877, 59.0931, 63.0422]
     IMAGE_SIZE: 512
     MIN_SCALE: 0.9
     MAX_SCALE: 2.0
@@ -331,6 +335,8 @@ TRASHCAN:
 
 XRAY_WASTE:
   INPUT:
+    PIXEL_MEAN: [249.4894, 248.8183, 246.3549]
+    PIXEL_STD: [18.6302, 20.3218, 28.5849]
     IMAGE_SIZE: 450
     MIN_SCALE: 0.9
     MAX_SCALE: 2.0
@@ -344,6 +350,8 @@ XRAY_WASTE:
 
 CITY:
   INPUT:
+    PIXEL_MEAN: [73.1773, 82.9281, 72.411]
+    PIXEL_STD: [47.2685, 48.095, 47.37]
     IMAGE_SIZE: 1024
     MIN_SCALE: 0.9
     MAX_SCALE: 2.0
